crates/rome_cli/tests/snapshots/main_commands_lint/apply_noop.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js
(1 >= 0)
```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


