crates/rome_cli/tests/snapshots/main_commands_lint/apply_suggested.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js
const a = 4;
console.log(a);

```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


