crates/rome_cli/tests/snapshots/main_commands_lint/check_stdin_apply_unsafe_successfully.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
function f() {return{}} class Foo { constructor() {} }
```

# Emitted Messages

```block
function f() {return{}} class Foo { }
```


