crates/rome_cli/tests/snapshots/main_commands_lint/doesnt_error_if_no_files_were_processed.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Emitted Messages

```block
Checked 0 file(s) in <TIME>
```


